--- a/media.html
+++ b/media.html
@@ -34,18 +34,6 @@
     <script src="./navbar.js"></script>
 
     <style>
-        .row {
-          display: flex; /* Use flexbox to create a flexible layout */
-          flex-wrap: wrap; /* Allow the columns to wrap to the next line if needed */
-          margin: 0 ; /* Add negative margin to counteract the padding applied to each column */
-        }
-    
-        .column {
-          flex: 0 0 calc(33.33%); /* Set each column to one-third of the container width with 10px padding on each side */
-          box-sizing: border-box; /* Include padding and border in the column's total width */
-          padding: 0 10px; /* Add some horizontal padding to the columns */
-        }
-    
         /* Ensure images are responsive */
         img {
           width: 100%; /* Set the width of the image to 100% of its container */
@@ -91,27 +79,28 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="row">
+<div class="mediacontainer"
+    <div class="row">
     <div class="column" style="margin-top: 10%">
         <!-- Title -->
         <h1>Media</h1>
         <p>Music, TV and Movies I'm Loving - May, 2024 </p>
         <h2>Music</h2>
-        <div class="row">
-            <div class="column">
+        <div class="mediarow">
+            <div class="mediacolumn">
                 <img src="images/media/music/tiamd.webp"
                     alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
-            <div class="column">
+            <div class="mediacolumn">
                 <img src="music_image_2.jpg" alt="Music Image 2" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
-            <div class="column">
+            <div class="mediacolumn">
                 <img src="music_image_3.jpg" alt="Music Image 3" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
@@ -120,20 +109,20 @@
         </div>
 
         <h2>TV</h2>
-        <div class="row">
-            <div class="column">
+        <div class="mediarow">
+            <div class="mediacolumn">
                 <img src="tv_image_1.jpg" alt="TV Image 1" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
-            <div class="column">
+            <div class="mediacolumn">
                 <img src="tv_image_2.jpg" alt="TV Image 2" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
-            <div class="column">
+            <div class="mediacolumn">
                 <img src="tv_image_3.jpg" alt="TV Image 3" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
@@ -142,20 +131,20 @@
         </div>
 
         <h2>Movies</h2>
-        <div class="row">
-            <div class="column">
+        <div class="mediarow">
+            <div class="mediacolumn">
                 <img src="movie_image_1.jpg" alt="Movie Image 1" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
-            <div class="column">
+            <div class="mediacolumn">
                 <img src="movie_image_2.jpg" alt="Movie Image 2" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
                 <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
             </div>
-            <div class="column">
+            <div class="mediacolumn">
                 <img src="movie_image_3.jpg" alt="Movie Image 3" style="width:100%">
                 <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
                 <h4>Hypnotic Brass Ensemble</h4>
@@ -164,6 +153,7 @@
         </div>
         <br>
     </div>
+</div>
 </div>
 </div>
 
