--- a/media.html
+++ b/media.html
@@ -71,26 +71,26 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="mediacontainer"
+<div class="container"
     <!-- Title -->
     <h1>Media</h1>
     <p>Music, TV and Movies I'm Loving - May, 2024 </p>
     <h2>Music</h2>
-    <div class="mediarow">
-        <div class="mediacolumn">
+    <div class="row">
+        <div class="column">
             <img src="images/media/music/tiamd.webp"
                 alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
-        <div class="mediacolumn">
+        <div class="column">
             <img src="music_image_2.jpg" alt="Music Image 2" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
-        <div class="mediacolumn">
+        <div class="column">
             <img src="music_image_3.jpg" alt="Music Image 3" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
@@ -99,20 +99,20 @@
     </div>
 
     <h2>TV</h2>
-    <div class="mediarow">
-        <div class="mediacolumn">
+    <div class="row">
+        <div class="column">
             <img src="tv_image_1.jpg" alt="TV Image 1" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
-        <div class="mediacolumn">
+        <div class="column">
             <img src="tv_image_2.jpg" alt="TV Image 2" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
-        <div class="mediacolumn">
+        <div class="column">
             <img src="tv_image_3.jpg" alt="TV Image 3" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
@@ -121,20 +121,20 @@
     </div>
 
     <h2>Movies</h2>
-    <div class="mediarow">
-        <div class="mediacolumn">
+    <div class="row">
+        <div class="column">
             <img src="movie_image_1.jpg" alt="Movie Image 1" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
-        <div class="mediacolumn">
+        <div class="column">
             <img src="movie_image_2.jpg" alt="Movie Image 2" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
-        <div class="mediacolumn">
+        <div class="column">
             <img src="movie_image_3.jpg" alt="Movie Image 3" style="width:100%">
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
