--- a/media.html
+++ b/media.html
@@ -78,26 +78,42 @@
     <h2>Music</h2>
     <div class="row">
         <div class="column">
-            <img src="images/media/music/tiamd.webp"
-                alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'" style="width:100%">
-            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
+            <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)" style="width:100%">
+            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
-            <img src="music_image_2.jpg" alt="Music Image 2" style="width:100%">
-            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-            <h4>Hypnotic Brass Ensemble</h4>
-            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+            <img src="images/media/music/pwata.webp" alt="People Who Aren’t There Anymore (2024)" style="width:100%">
+            <h3>People Who Aren’t There Anymore (2024)</h3>
+            <h4>Future Islands</h4>
+            <p>this album has copped a bit of flak online, but it's a solid Future Islands record to me</p>
         </div>
         <div class="column">
-            <img src="music_image_3.jpg" alt="Music Image 3" style="width:100%">
-            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
-            <h4>Hypnotic Brass Ensemble</h4>
-            <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
+            <img src="images/media/music/fmove.webp" alt="Fearless Movement (2024)" style="width:100%">
+            <h3>Fearless Movement (2024)</h3>
+            <h4>Kamasi Washington</h4>
+            <p>huge record with so many different movements, arrangements, and feelings</p>
         </div>
     </div>
-
+    <h2>Also in Rotation</h2>
+    <div class="row">
+        <div class="column">
+            <img src="images/media/music/tangk.webp" alt="Tangk (2024)" style="width:100%">
+            <h3>Tangk (2024)</h3>
+            <h4>Idles</h4>
+        </div>
+        <div class="column">
+            <img src="images/media/music/wmuto.webp" alt="Where's My Utopia? (2024)" style="width:100%">
+            <h3>Where's My Utopia? (2024)</h3>
+            <h4>Yard Act</h4>
+        </div>
+        <div class="column">
+            <img src="images/media/music/ok.webp" alt="O.K. (2015)" style="width:100%">
+            <h3>O.K. (2015)</h3>
+            <h4>Kool A.D.</h4>
+        </div>
+    </div>
     <h2>TV</h2>
     <div class="row">
         <div class="column">
