--- a/media.html
+++ b/media.html
@@ -33,6 +33,16 @@
     <link rel="stylesheet" href="css/navbar.css">
     <script src="./navbar.js"></script>
 
+    <style>
+        /* Adjust the width of the images to fit three in a row */
+        img {
+          max-width: 30%; /* Set the maximum width of each image to 30% of the container */
+          height: auto; /* Ensure the height adjusts proportionally based on the width */
+          display: block; /* Ensure images are displayed as block elements */
+          margin: 0 auto; /* Center align the images */
+        }
+      </style>
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
