--- a/media.html
+++ b/media.html
@@ -98,19 +98,26 @@
     <h2>Music</h2>
     <div class="row">
         <div class="column">
-            <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)" style="width:100%">
+            <div class="image-container">
+                <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
-            <img src="images/media/music/pwata.webp" alt="People Who Aren’t There Anymore (2024)" style="width:100%">
+            <div class="image-container">
+            </div>
+                <img src="images/media/music/pwata.webp" alt="People Who Aren’t There Anymore (2024)">
+            </div>
             <h3>People Who Aren’t There Anymore (2024)</h3>
             <h4>Future Islands</h4>
             <p>this album has copped a bit of flak online, but it's a solid Future Islands record to me</p>
         </div>
         <div class="column">
-            <img src="images/media/music/fmove.webp" alt="Fearless Movement (2024)" style="width:100%">
+            <div class="image-container">
+                <img src="images/media/music/fmove.webp" alt="Fearless Movement (2024)">
+            </div>
             <h3>Fearless Movement (2024)</h3>
             <h4>Kamasi Washington</h4>
             <p>huge record with so many different movements, arrangements, and feelings</p>
@@ -119,17 +126,23 @@
     <h2>Also in Rotation</h2>
     <div class="row">
         <div class="column">
-            <img src="images/media/music/tangk.webp" alt="Tangk (2024)" style="width:100%">
+            <div class="image-container">
+                <img src="images/media/music/tangk.webp" alt="Tangk (2024)">
+            </div>
             <h3>Tangk (2024)</h3>
             <h4>Idles</h4>
         </div>
         <div class="column">
-            <img src="images/media/music/wmuto.webp" alt="Where's My Utopia? (2024)" style="width:100%">
+            <div class="image-container">
+                <img src="images/media/music/wmuto.webp" alt="Where's My Utopia? (2024)">
+            </div>
             <h3>Where's My Utopia? (2024)</h3>
             <h4>Yard Act</h4>
         </div>
         <div class="column">
-            <img src="images/media/music/ok.webp" alt="O.K. (2015)" style="width:100%">
+            <div class="image-container">
+                <img src="images/media/music/ok.webp" alt="O.K. (2015)">
+            </div>
             <h3>O.K. (2015)</h3>
             <h4>Kool A.D.</h4>
         </div>
@@ -137,19 +150,25 @@
     <h2>TV</h2>
     <div class="row">
         <div class="column">
-            <img src="tv_image_1.jpg" alt="TV Image 1" style="width:100%">
+            <div class="image-container">
+                <img src="tv_image_1.jpg" alt="TV Image 1">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
-            <img src="tv_image_2.jpg" alt="TV Image 2" style="width:100%">
+            <div class="image-container">
+                <img src="tv_image_2.jpg" alt="TV Image 2">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
-            <img src="tv_image_3.jpg" alt="TV Image 3" style="width:100%">
+            <div class="image-container">
+                <img src="tv_image_3.jpg" alt="TV Image 3">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
@@ -159,19 +178,25 @@
     <h2>Movies</h2>
     <div class="row">
         <div class="column">
-            <img src="movie_image_1.jpg" alt="Movie Image 1" style="width:100%">
+            <div class="image-container">
+                <img src="movie_image_1.jpg" alt="Movie Image 1">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
-            <img src="movie_image_2.jpg" alt="Movie Image 2" style="width:100%">
+            <div class="image-container">
+                <img src="movie_image_2.jpg" alt="Movie Image 2">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
-            <img src="movie_image_3.jpg" alt="Movie Image 3" style="width:100%">
+            <div class="image-container">
+                <img src="movie_image_3.jpg" alt="Movie Image 3">
+            </div>
             <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie'</h3>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
