--- a/media.html
+++ b/media.html
@@ -107,7 +107,7 @@
         </div>
         <div class="column">
             <div class="image-container">
-            </div>
+            <div>
                 <img src="images/media/music/pwata.webp" alt="People Who Aren’t There Anymore (2024)">
             </div>
             <h3>People Who Aren’t There Anymore (2024)</h3>
