--- a/media.html
+++ b/media.html
@@ -48,9 +48,8 @@
 
         /* Adjust the width of the images to fit three in a row */
         .image-container img {
-        width: calc(33.33% - 20px); /* Calculate width for three images with some spacing between */
-        margin-bottom: 20px; /* Add some spacing between images vertically */
-        object-fit: cover; /* Ensure images maintain their aspect ratio and cover the container */
+        width: 100%; /* Set image width to 100% of its container */
+        height: auto; /* Maintain aspect ratio */
         }
 
         /* Container style */
