--- a/media.html
+++ b/media.html
@@ -128,51 +128,60 @@
     <div class="row">
         <div class="column">
             <div class="image-container">
-                <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)">
+                <a href="https://hypn0ticbrass.bandcamp.com/album/this-is-a-mindfulness-drill-a-reimagining-of-richard-youngs-sapphie">
+                    <img src="images/media/music/tiamd.webp" alt="This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)">
+                </a>
             </div>
-            <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)</h3>
+            <a href="https://hypn0ticbrass.bandcamp.com/album/this-is-a-mindfulness-drill-a-reimagining-of-richard-youngs-sapphie">
+                <h3>This is a Mindfulness Drill: A Reimagining of Richard Youngs' 'Sapphie' (2021)</h3>
+            </a>
             <h4>Hypnotic Brass Ensemble</h4>
             <p>clean, fuzzy, warm, eerie, delicate, dynamic, living, cyclic, zone-out, floating</p>
         </div>
         <div class="column">
             <div class="image-container">
-                <img src="images/media/music/pwata.webp" alt="People Who Aren’t There Anymore (2024)">
+                <a href="https://futureislands.bandcamp.com/album/people-who-aren-t-there-anymore">
+                    <img src="images/media/music/pwata.webp" alt="People Who Aren’t There Anymore (2024)">
+                </a>
             </div>
-            <h3>People Who Aren’t There Anymore (2024)</h3>
+            <a href="https://futureislands.bandcamp.com/album/people-who-aren-t-there-anymore">
+                <h3>People Who Aren’t There Anymore (2024)</h3>
+            </a>
             <h4>Future Islands</h4>
             <p>this album has copped a bit of flak online, but it's a solid Future Islands record to me</p>
         </div>
         <div class="column">
             <div class="image-container">
-                <img src="images/media/music/fmove.webp" alt="Fearless Movement (2024)">
+                <a href="https://kamasiwashington.bandcamp.com/album/fearless-movement">
+                    <img src="images/media/music/fmove.webp" alt="Fearless Movement (2024)">
+                </a>
             </div>
-            <h3>Fearless Movement (2024)</h3>
+            <a href="https://kamasiwashington.bandcamp.com/album/fearless-movement">
+                <h3>Fearless Movement (2024)</h3>
+            </a>
             <h4>Kamasi Washington</h4>
             <p>huge record with so many different movements, arrangements, and feelings</p>
         </div>
-    </div>
+    </div>    
     <h2>Also in Rotation</h2>
     <div class="row">
         <div class="column">
             <div class="image-container">
                 <img src="images/media/music/tangk.webp" alt="Tangk (2024)">
             </div>
-            <h3>Tangk (2024)</h3>
-            <h4>Idles</h4>
+            <h4>Tangk (2024) - Idles</h4>
         </div>
         <div class="column">
             <div class="image-container">
                 <img src="images/media/music/wmuto.webp" alt="Where's My Utopia? (2024)">
             </div>
-            <h3>Where's My Utopia? (2024)</h3>
-            <h4>Yard Act</h4>
+            <h4>Where's My Utopia? (2024) - Yard Act</h4>
         </div>
         <div class="column">
             <div class="image-container">
                 <img src="images/media/music/ok.webp" alt="O.K. (2015)">
             </div>
-            <h3>O.K. (2015)</h3>
-            <h4>Kool A.D.</h4>
+            <h4>O.K. (2015) - Kool A.D.</h4>
         </div>
     </div>
     <h2>TV</h2>
