--- a/media.html
+++ b/media.html
@@ -167,6 +167,26 @@
     <div class="row">
         <div class="column">
             <div class="image-container">
+                <img src="images/media/music/funde.webp" alt="Filthy Underneath (2024)">
+            </div>
+            <h4>Filthy Underneath (2024) - Nadine Shah</h4>
+        </div>
+        <div class="column">
+            <div class="image-container">
+                <img src="images/media/music/hovvd.webp" alt="Hovvdy (2024)">
+            </div>
+            <h4>Hovvdy (2024) - Hovvdy</h4>
+        </div>
+        <div class="column">
+            <div class="image-container">
+                <img src="images/media/music/hyper.webp" alt="Hyperdrama (2024)">
+            </div>
+            <h4>Hyperdrama (2024) - Justice</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="image-container">
                 <img src="images/media/music/tangk.webp" alt="Tangk (2024)">
             </div>
             <h4>Tangk (2024) - Idles</h4>
