--- a/media.html
+++ b/media.html
@@ -39,14 +39,13 @@
         /* Define the custom font */
         @font-face {
         font-family: 'BerkeleyMonoVariable';
-        src: url('fonts/berkeley-mono-variable-2.woff2') format('woff2'), /* Modern Browsers */
-            url('path/to/your/font.woff') format('woff'); /* Older Browsers */
+        src: url('fonts/berkeley-mono-variable-2.woff2') format('woff2')
         /* Add additional font formats if necessary */
         }
 
         /* Apply the custom font to specific elements */
         body {
-        font-family: 'BerkeleyMonoVariable', sans-serif; /* Apply the custom font as the primary font with a fallback to sans-serif */
+        font-family: 'BerkeleyMonoVariable', monospace; /* Apply the custom font as the primary font with a fallback to sans-serif */
         }
 
         /* Container style */
